# ReachScan

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  LICENSE  MANIFEST.sha256  NOTICE  README.md  REPO_INTEGRATION.md  pyproject.toml  ruff.toml
.agents/skills/reachscan-review/: SKILL.md
.claude/skills/reachscan-review/: SKILL.md
.cursor/rules/: reachscan-review.mdc
.github/workflows/: ci.yml
archive/: README.md
docs/: BUILD_A_PROJECTION_PACK.md  CHOOSE_YOUR_RUN.md  CLAIM_LADDER.md  PREDICTION_CONTRACT.md  PRODUCT_ARCHITECTURE.md  R006_RAW_COMPLETION.md  RUN_PATH.md  instrument_control_surface.dot
docs/agents/: README.md  reachscan-operator.md
docs/experiments/: llama31_floor_sum_predeclared.md  run_ledger.md
examples/: custom_projection.py  source_contrast.py
examples/demo_run/: receipts.csv  receipts.csv.meta.json  run_manifest.json  summary_by_depth.csv  summary_by_depth.csv.meta.json
examples/openweights_floor_sum/: README.md  reproject_mod8.py
mcp/: README.md
notebooks/: reachscan_llama_quickstart.ipynb  reachscan_quickstart.ipynb
release_assets/: RELEASE_ASSETS.md  release_manifest.json
scripts/: verify_release_assets.py
src/reachscan/: __init__.py  contracts.py  contrast.py  engine.py  hf_source.py  metadata.py  mock_source.py  prediction.py  prefix_sources.py  projection_pack.py  projections.py  run_contract.py
src/reachscan/packs/: __init__.py
tests/: test_engine.py  test_prediction.py  test_projection_pack.py  test_run_contract.py
tests/data/: prediction_receipt_fixture_cases.json
(+18 files in other folders)
