[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachscan"
version = "0.2.4"
description = "Measure the future field of a committed reasoning prefix: target reachability, basin structure, and foreclosure under commitment."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Michael Richard Nothem"}]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
]
dependencies = []

[project.optional-dependencies]
hf = ["torch>=2.0", "transformers>=4.40", "accelerate>=0.26"]
plot = ["matplotlib>=3.7"]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://reachabilitylabs.org"
Repository = "https://github.com/ReachabilityLabs/ReachScan"
"SAT predecessor" = "https://doi.org/10.5281/zenodo.19225548"

[project.scripts]
reachscan-demo = "reachscan.tools.run_demo:main"

[tool.setuptools.packages.find]
where = ["src"]
